# smart_plantation

./: Doxyfile  README.md  config.txt
code_dokumentation/: Doxyfile
code_dokumentation/html/: adc__sensor_8c.html  adc__sensor_8h.html  adc__sensor_8h_source.html  dir_167790342fb55959539d550b874be046.html  dir_9e5428c68ef538e6de7be80d73bc7287.html  dir_e2189fe7b77efe013e62d956fa6ae8cd.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8c.html  mdns__server_8c.html  mdns__server_8h.html  mdns__server_8h_source.html  menudata.js  task__common_8c.html  task__common_8h.html  task__common_8h_source.html  wifi-server_8c.html  wifi-server_8h.html  wifi-server_8h_source.html
project/: CMakeLists.txt
project/Smart_Plantation/main/: CMakeLists.txt  Kconfig.projbuild  adc_read.c  adc_read.h  adc_sensor.c  adc_sensor.h  idf_component.yml  main.c  mdns_server.c  mdns_server.h  task_common.c  task_common.h  temperature_sensor.c  temperature_sensor.h  wifi-server.c  wifi-server.h
project/Smart_Plantation/main/backend/: http_server.c  http_server.h  mdns_server.c  mdns_server.h  sntp_client.c  sntp_client.h  wifi-server.c  wifi-server.h  wifi_connection.c  wifi_connection.h
project/Smart_Plantation/main/common/: config_storage.c  config_storage.h  task_common.c  task_common.h
project/Smart_Plantation/main/peripherals/: fan_control.c  fan_control.h  led_rgb.c  led_rgb.h  led_rgb_control.c  led_rgb_control.h  wifi_plug.c  wifi_plug.h
project/Smart_Plantation/main/sensors/: adc_read.c  adc_read.h  light_sensor.c  light_sensor.h  moisture_sensor.c  moisture_sensor.h  temperature_sensor.c  temperature_sensor.h
project/Smart_Plantation/main/website/: app.css  app.js  index.html
(+70 files in other folders)
