idf_component_register(
        SRCS
        "peripherals/led_rgb_control.c"
        "backend/mdns_server.c"
        "common/task_common.c"
        "main.c"
        "backend/http_server.c"
        "backend/wifi_connection.c"
        "sensors/temperature_sensor.c"
        "backend/sntp_client.c"
        "common/config_storage.c"
        "peripherals/wifi_plug.c"
        "peripherals/fan_control.c"
        "sensors/light_sensor.c"
        "sensors/adc_read.c"
        INCLUDE_DIRS "."
        EMBED_FILES
        website/index.html
        website/app.css
        website/app.js
        website/logo.png
)